Fix the scrollbar-gutter

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,9 @@
 @import 'tailwindcss';
+
+html {
+  scrollbar-gutter: stable;
+  overflow-x: hidden;
+}
 a,
 a:hover {
   text-decoration: none;
